# mgrs2latlong

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.rs
