[package]
name = "mgrs2latlong"
version = "0.1.0"
edition = "2021"
authors = ["Albert Hui <albert@securityronin.com>"]
description = "A command-line tool for converting MGRS coordinates to latitude/longitude in CSV files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4n6h4x0r/mgrs2latlong"
keywords = ["mgrs", "coordinates", "gis", "conversion", "csv"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
regex = "1.10"
geoconvert = "1.0"
anyhow = "1.0"
